--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -621,11 +621,118 @@ Most CM and RCM implementations assume the algorithms operate on square, symmetr
 
 \subsection{Impact of Orderings}
 
-To compare the impact of the orderings in Figure~\ref{fig:orderings} we turn to the best case found above. RCM operates at the node level, so results will be more or less consistent. With $n$ non-zeros per row it is possible for different starting points to be chosen, which allows for some variance in the resulting bandwidth. 
+To compare the impact of orderings in Figure~\ref{fig:orderings}, the MATLAB implementation of fixed-grid (\cite{BolligRBFFixedGrid}) generates stencils and writes the sorted nodes and stencils to disk. The nodes and stencils are accepted as input for the C++ code which benchmarks the SpMV. 
+Bit interleaving occurs in a MATLAB script that leverages the \emph{bitand}, \emph{bitor}, and \emph{bitxor} routines. Bitwise operators in MATLAB provide limited support for integers are restricted to 32-bits, but these are sufficient for testing purposes. The MATLAB provided \emph{symrcm} routine performs the Reverse Cuthill-McKee. 
+
+The first point for consideration in choosing the right ordering is the resulting bandwidth of the matrix. Given that 
+
+The second point is the SpMV time. 
+
+
+With RBF-FD generating the same number of non-zeros per row, it is possible for RCM to select different starting nodes depending on the input node orderings. This allows for some variance in the resulting bandwidth. Results shown here apply RCM the results of a raster-ordered fixed-grid. 
+
+
+we turn to the best case found above. RCM operates at the node level, so results will be more or less consistent. With $n$ non-zeros per row it is possible for different starting points to be chosen, which allows for some variance in the resulting bandwidth. 
 
 Rather than complete a full analysis of the impact from space filling curves, we only consider the ideal cases from CVT and RG (because they are used in the thesis). The integer dilation is costly and does not appear to significantly improve the performance of the best cases.
 
 RCM is effective and can be used as post-processing once stencils are generated and/or DMs have been assembled. 
+
+\cite{MellorCrummey2001} found that reodering nodes via RCM and space filling curves offer similar benefits in terms of reduced TLB misses and better cache coherency. 
+
+\begin{figure}
+\centering
+\includegraphics[width=0.90\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d3_n31_hn6.png} 
+\caption{Impact of node orderings on an $N=18^3$ regular grid in 3-D. Stencil size $n=31$, fixed-grid resolution $(h_n)^d=6^3$. }
+\label{fig:ordering_impact_rg}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.90\textwidth]{rbffd_methods_content/hashing/dm_node_orderings_md4096_n31_hn10.png} 
+\caption{ The impact of reordering on sparsity patterns for $N=4096$ MD nodes on the sphere. Stencil size $n=31$, fixed-grid resolution per dimension $h_n=10$. }
+\label{fig:orderings}
+\end{figure}
+
+
+
+%\begin{table}[h]\footnotesize
+%  \centering
+%  \caption{Ordering Comparison for $N=10^5$ CVT unit sphere. Stencil size $n=50$, fixed-grid resolution, $h_n=100$}
+%  \begin{tabular}{ c | c | c | c | c | c | c }
+%               & IJK & RCM & Z & X & U & 4-node Z \\
+%               \hline
+%   Bandwidth   &  8209	& 12973	 & 70545	& 87983 & 73699 & 70573   \\
+%   \hline
+%   SpMV Speedup vs IJK & 1 &	1.005 & 1.004 & 0.98 & 1.01 & 1.01 \\
+%  \end{tabular}
+%\end{table}
+
+
+%TODO: impact relative to Raster order. because we're trying to justify the use of another ordering. 
+\begin{table}[h]\footnotesize
+  \centering
+  \caption{Ordering Comparison for $N=10^6$ CVT unit sphere. Stencil size $n=50$, fixed-grid resolution, $h_n=160$}
+  \label{tbl:ordering_impact}
+  \begin{tabular}{ c | c | c | c | c | c | c }
+               & IJK & RCM & Z & X & U & 4-node Z \\
+               \hline
+   Bandwidth   &  7885	& 6566	& 575606 &	819312 & 611513 & 513579   \\
+   \hline
+   SpMV Speedup vs IJK & 1 &	1.09 & 1.06 & 1.06 & 1.04 & 0.94 \\
+  \end{tabular}
+\end{table}
+
+
+The SpMV results in Table~\ref{tbl:ordering_impact} may show a larger divide 
+%TODO: 4-node Z might be more appropriate for large stencils as it bundles larger groups
+
+
+\section{Conclusion and Future Work}
+
+
+
+%TODO: move down
+Although RBF-FD only requires neighbor queries once, the results that follow reveal a long lasting positive impact on memory with a fixed-grid method, which is sufficient to justify its use. Investigations into moving node coordinates and/or local refinements for RBF methods (e.g., \cite{FlyerLehto10}) would find the fixed-grid method significantly more beneficial. As of this writing no known applications of RBF-FD consider moving nodes
+
+Due to the limited significance of stencil generation under RBF-FD, the overhead in implementing and debugging the fixed-grid method on the GPU is difficult to justify. The implementation tested here was developed as a pure CPU prototype with minimal attention to optimization. The added complexity in reproducing the efficient fixed-grid method on the GPU could be the subject of future work for moving nodes. 
+
+\cite{Connor2009} could benefit the algorithm by sorting nodes completely based on floating point $Z$-ordering.
+
+It is worth noting that recent work by Connor and Kumar \cite{Connor2009} has developed operators capable of producing $Z$-orderings based on floating point coordinates. 
+
+For quasi-regular distributions and small to medium sized grids the $k$-D Tree performs well enough in comparison to the fixed-grid method. However, the difference in 
+%TODO: what value? 
+
+There is an ideal $h_n$. %TODO: what is is as a function of N?
+
+
+
+
+While more efficient implementations are possible, the savings demonstrated by Figure~\ref{sten_methods_compare} the savings are significant with the right choice of $h_n$. Generating stencils for RBF-FD is a preprocessing cost, so we do not dedicate an excessive amount of attention to this algorithm. However, a few ideas that would improve: hilbert ordering, choose AABB resolution based on $N$ not user parameters, faster sorting, GPU implementation
+
+Open item from to this section include: 
+\begin{itemize} 
+\item An efficient GPU $k$-NN implementation for the investigation of RBF-FD in a moving nodes or adaptive mesh refinement situation. Examples include \cite{Pan2011, Goswami2010, Connor2009}
+\item Space filling curves are limited to a MATLAB prototype at the moment. These can be implemented in C++ for integers, with a potential investigation into floating point dilation and orderings \cite{Connor2009}.
+\item 
+\end{itemize}
+
+\cite{Saad2003} mentions the impact of ordering on conditioning.
+
+
+TODO: 
+\begin{itemize} 
+\item Node orderings based on integer dilation
+\begin{itemize} 
+\item RCM algorithm high level (?)
+\item Define bandwidth metric
+\item bandwidth implications on memory access (lower bandwidth is usually better)
+\item table showing the impact of orderings on bandwidths (already shown in figure, for N=4096). 
+\end{itemize} 
+\end{itemize}
+
+
 
 
 %
@@ -656,129 +763,6 @@ RCM is effective and can be used as post-processing once stencils are generated 
 %\label{fig:orderings}
 %\end{figure}
 
-
-
-To test the significance and impact of orderings
-
-during the fixed-grid query, as nodes are hashed to cell coordinates, the coordinates are dilated and interleaved to produce the proper hash index. 
-
-Querying the neighbor amounts to constructing a list of un-hashed cell coordinates and indexing the cell bucket list in IJK order.  and only enough neighbor counts have been found
-
-The ideal differentiation matrix, corresponding to discretization of a line, would have all non-zeros on the first $\frac{n-1}{2}$ to each side of the diagonal. For 2- or 3-D domains the ideal case is not possible to achieve, but the nodes can be reordered with the goal to condense
-At the end of BuildFixedGrid the original set of nodes, $P$ is overwritten by $\hat{P}$. While nothing requires that $\hat{P}$ replace the usage of $P$ 
-
-
-
-\cite{MellorCrummey2001} found that reodering nodes via RCM and space filling curves offer similar benefits in terms of reduced TLB misses and better cache coherency. 
-
-
-
-
-
-%TODO: add RCM and fix order
-\begin{figure}
-\centering
-%\includegraphics[width=0.85\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d2_n31_hn6.png} \\
-\includegraphics[width=0.85\textwidth]{rbffd_methods_content/hashing/spy_regulargrid_N18d3_n31_hn6.png} 
-\caption{In order: a) node ordering test cases; b) original ordering of regular grid (raster); c) coarse grid overlay for hash functions ($hnx = 6$); d) example stencil ($n=31$) spanning multiple Z's; e) spy of DM after orderings.  3) Spy impact on MD node set $N=4096$, stencil size $n=31$, $h_n = 6$ }
-\label{fig:ordering_impact_rg}
-\end{figure}
-
-
-The RCM algorithm is a breadth first search over stencils to order them based on the minimum degree (number of connections per stencil). The zig-zag ordering shown in Figure~\ref{fig:orderings} is an ideal case where all nodes are connected to two neighbors (i.e., $n=3$). In practice the curve trends diagonally across the domain due to the BFS property, but the ordering often appears to connect nodes randomly 
-
-\begin{figure}
-\centering
-\includegraphics[width=0.85\textwidth]{rbffd_methods_content/hashing/dm_node_orderings_md4096_n31_hn10.png} 
-\caption{ The impact of reordering on sparsity patterns for $N=4096$ MD nodes on the sphere. Stencil size $n=31$, fixed-grid resolution per dimension $h_n=10$. }
-\label{fig:orderings}
-\end{figure}
-
-
-
-
-Obviously, the ideal case for bandwidth is when all rows contain the $\frac{n}{2}$ nodes corresponding to solution value to either side of $u_j$. In 1-D this corresponds to every node containing the $\frac{n}{2}$ nodes to the left and right of $x_j$. In 2-D this is only possible if the nodes in the domain are properly indexed such that stencils contain the proper set of neighbors---a stringent requirement that will 
-
-impact from ordering on matrix sparsity. Bandwidth impact. Bandwidth impact on condition considered in future chapter. 
-
-One frequently hears that ordering via space filling curves like Morton Ordering and/or gray codes can benefit memory access patterns. 
-
-
-%\begin{table}[h]\footnotesize
-%  \centering
-%  \caption{Ordering Comparison for $N=10^5$ CVT unit sphere. Stencil size $n=50$, fixed-grid resolution, $h_n=100$}
-%  \begin{tabular}{ c | c | c | c | c | c | c }
-%               & IJK & RCM & Z & X & U & 4-node Z \\
-%               \hline
-%   Bandwidth   &  8209	& 12973	 & 70545	& 87983 & 73699 & 70573   \\
-%   \hline
-%   SpMV Speedup vs IJK & 1 &	1.005 & 1.004 & 0.98 & 1.01 & 1.01 \\
-%  \end{tabular}
-%\end{table}
-
-
-%TODO: impact relative to Raster order. because we're trying to justify the use of another ordering. 
-\begin{table}[h]\footnotesize
-  \centering
-  \caption{Ordering Comparison for $N=10^6$ CVT unit sphere. Stencil size $n=50$, fixed-grid resolution, $h_n=160$}
-  \begin{tabular}{ c | c | c | c | c | c | c }
-               & IJK & RCM & Z & X & U & 4-node Z \\
-               \hline
-   Bandwidth   &  7885	& 6566	& 575606 &	819312 & 611513 & 513579   \\
-   \hline
-   SpMV Speedup vs IJK & 1 &	1.09 & 1.06 & 1.06 & 1.04 & 0.94 \\
-  \end{tabular}
-\end{table}
-
-
-
-
-%TODO: Related? \url{http://publish.uwo.ca/~shaque4/presentationSONAD.pdf} \url{http://www.cs.duke.edu/~alvy/papers/sc98/} \url{http://www.cs.indiana.edu/~dswise/Arcee/Papers/medea06.pdf} \url{http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.118.7720&rep=rep1&type=pdf} \url{http://stackoverflow.com/questions/4260002/benefits-of-nearest-neighbor-search-with-morton-order})
-
-\section{Conclusion and Future Work}
-
-
-
-%TODO: move down
-Although RBF-FD only requires neighbor queries once, the results that follow reveal a long lasting positive impact on memory with a fixed-grid method, which is sufficient to justify its use. Investigations into moving node coordinates and/or local refinements for RBF methods (e.g., \cite{FlyerLehto10}) would find the fixed-grid method significantly more beneficial. As of this writing no known applications of RBF-FD consider moving nodes
-
-Due to the limited significance of stencil generation under RBF-FD, the overhead in implementing and debugging the fixed-grid method on the GPU is difficult to justify. The implementation tested here was developed as a pure CPU prototype with minimal attention to optimization. The added complexity in reproducing the efficient fixed-grid method on the GPU could be the subject of future work for moving nodes. 
-
-\cite{Connor2009} could benefit the algorithm by sorting nodes completely based on floating point $Z$-ordering.
-
-It is worth noting that recent work by Connor and Kumar \cite{Connor2009} has developed operators capable of producing $Z$-orderings based on floating point coordinates. 
-
-For quasi-regular distributions and small to medium sized grids the $k$-D Tree performs well enough in comparison to the fixed-grid method. However, the difference in 
-%TODO: what value? 
-
-There is an ideal $h_n$. %TODO: what is is as a function of N?
-
-
-
-\subsection{Future Work}
-
-While more efficient implementations are possible, the savings demonstrated by Figure~\ref{sten_methods_compare} the savings are significant with the right choice of $h_n$. Generating stencils for RBF-FD is a preprocessing cost, so we do not dedicate an excessive amount of attention to this algorithm. However, a few ideas that would improve: hilbert ordering, choose AABB resolution based on $N$ not user parameters, faster sorting, GPU implementation
-
-Open item from to this section include: 
-\begin{itemize} 
-\item An efficient GPU $k$-NN implementation for the investigation of RBF-FD in a moving nodes or adaptive mesh refinement situation. Examples include \cite{Pan2011, Goswami2010, Connor2009}
-\item Space filling curves are limited to a MATLAB prototype at the moment. These can be implemented in C++ for integers, with a potential investigation into floating point dilation and orderings \cite{Connor2009}.
-\item 
-\end{itemize}
-
-\cite{Saad2003} mentions the impact of ordering on conditioning.
-
-
-TODO: 
-\begin{itemize} 
-\item Node orderings based on integer dilation
-\begin{itemize} 
-\item RCM algorithm high level (?)
-\item Define bandwidth metric
-\item bandwidth implications on memory access (lower bandwidth is usually better)
-\item table showing the impact of orderings on bandwidths (already shown in figure, for N=4096). 
-\end{itemize} 
-\end{itemize}
 
 
 \ifstandalone
